# aoc2022

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  aoc.h  new_day.sh
01/: lib.cpp  main.cpp  test.cpp
02/: lib.cpp  lib.h  main.cpp  test.cpp
03/: lib.cpp  main.cpp  test.cpp
04/: lib.cpp  main.cpp  test.cpp
05/: lib.cpp  lib.h  main.cpp  test.cpp
06/: lib.cpp  lib.h  main.cpp  test.cpp
07/: .lib.cpp.swp  lib.cpp  lib.h  main.cpp  test.cpp
10/: lib.cpp  lib.h  main.cpp  test.cpp
11/: lib.cpp  lib.h  main.cpp  test.cpp
template/: cookiecutter.json  lib.cpp  lib.hpp  main.cpp  test.cpp
template/hooks/: pre_gen_project.py
template/{{"{:>02}".format(cookiecutter.day)}}/: lib.cpp  lib.h  main.cpp  test.cpp
